user-skel/ansible/roles/app-unguard/files/repos/unguard/k8s-manifests/localdev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unguard-ingress
  labels:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: unguard
spec:
  rules:
    - host: unguard.kube
      http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: unguard-envoy-proxy
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unguard-envoy-proxy
                port:
                  number: 8080
